WIP: Add PotassiumOutput
Change-Id: Id2fb3bd4da2f0f3e05b73c0c28c14dd69846bfa9
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>