@@ -8,7 +8,7 @@
 package org.opendaylight.yangtools.yang.data.codec.binfmt;
 
 import com.google.common.collect.ImmutableSet;
-import java.util.Collections;
+import java.util.List;
 import org.junit.Assert;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -21,8 +21,9 @@ import org.opendaylight.yangtools.yang.data.api.YangInstanceIdentifier.Augmentat
 public class AidSerializationTest extends AbstractSerializationTest {
     @Parameters(name = "{0}")
     public static Iterable<Object[]> data() {
-        return Collections.singletonList(
-            new Object[] { NormalizedNodeStreamVersion.MAGNESIUM, 4, 94, 332, 2376, 716_618, 912_975 });
+        return List.of(
+            new Object[] { NormalizedNodeStreamVersion.MAGNESIUM, 4, 94, 332, 2376, 716_618, 912_975 },
+            new Object[] { NormalizedNodeStreamVersion.POTASSIUM, 4, 94, 332, 2376, 716_618, 912_975 });
     }
 
     @Parameter(1)
